jlamontSC-test/src/objects/Club_Event__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Directions__c</fullName>
        <label>Additional Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Info_URL__c</fullName>
        <label>Additional Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ask_for_Additional_Attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Additional Attendees?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Mobile Phone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Phone Number?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_Street_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for Street Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_for_ZIP_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for ZIP Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Begin_Publication__c</fullName>
        <label>Begin Publication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bring__c</fullName>
        <label>Bring</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Strategy_Global__c</fullName>
        <label>Campaign Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>National_Campaign_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Campaign_Strategy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Club Events</relationshipLabel>
        <relationshipName>Club_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Can_Take_Attendance__c</fullName>
        <formula>IF(ISNULL(Date_End__c), Date_Begin__c &lt;= TODAY() &amp;&amp; Date_Begin__c &gt;= TODAY()-7, Date_Begin__c &lt;= TODAY() &amp;&amp; Date_End__c &gt;= TODAY()-7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Can Take Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Option__c</fullName>
        <label>Cancellation Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any rain cancels</fullName>
                </value>
                <value>
                    <fullName>Heavy rain cancels</fullName>
                </value>
                <value>
                    <fullName>Activity is held rain or shine, but may be altered due to inclement weather</fullName>
                </value>
                <value>
                    <fullName>Steady rain cancels</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Policy_Description__c</fullName>
        <label>Cancellation Policy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carpool__c</fullName>
        <label>Carpool</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Club_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Entity</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipLabel>Club Events</relationshipLabel>
        <relationshipName>Club_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Description__c</fullName>
        <label>Cost Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Field_1_Label__c</fullName>
        <label>Custom Field 1 Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_2_Label__c</fullName>
        <label>Custom Field 2 Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_3_Label__c</fullName>
        <label>Custom Field 3 Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Begin__c</fullName>
        <label>Date Begin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_End__c</fullName>
        <label>Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tentative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Tentative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deletion_Allowed__c</fullName>
        <formula>ISPICKVAL(Status__c, &apos;In Development&apos;) || 
ISPICKVAL(Status__c, &apos;Pending Approval&apos;) || 
ISPICKVAL(Status__c, &apos;Changes Required&apos;) || 
ISPICKVAL(Status__c, &apos;Disapproved&apos;) ||
ISPICKVAL(Status__c, &apos;Cancelled&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deletion Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Field 1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Field 2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Field 3?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Method__c</fullName>
        <label>Display Method</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_show_on_website_calendars__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to prevent the event from being seen on ALL calendars. For Invite Only events.</inlineHelpText>
        <label>Do not show on website calendars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Specific_Level__c</fullName>
        <label>Entity Specific Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activist Event</fullName>
                </value>
                <value>
                    <fullName>Club Support Event</fullName>
                </value>
                <value>
                    <fullName>Outing</fullName>
                </value>
                <value>
                    <fullName>Social Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <label>Event Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_URL__c</fullName>
        <label>External URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Club_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is a Club Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Strenuous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_Publication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit Publication to Sponsoring Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Campaign_Global__c</fullName>
        <label>Local Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Campaign_Strategy_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Local_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Grassroots_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local/Grassroots Campaign</label>
        <referenceTo>Local_Grassroots_Campaign__c</referenceTo>
        <relationshipLabel>Club Events</relationshipLabel>
        <relationshipName>Club_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Interest_Area_Global__c</fullName>
        <label>Marketing Interest Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Interest_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Interest_Area__c</fullName>
        <label>Marketing Interest Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clean air and water</fullName>
                </value>
                <value>
                    <fullName>Clean energy</fullName>
                </value>
                <value>
                    <fullName>Democracy</fullName>
                </value>
                <value>
                    <fullName>Equality</fullName>
                </value>
                <value>
                    <fullName>Fossil fuels</fullName>
                </value>
                <value>
                    <fullName>Getting outdoors</fullName>
                </value>
                <value>
                    <fullName>Wildlife</fullName>
                </value>
                <value>
                    <fullName>Protect nature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Tags_Global__c</fullName>
        <label>Marketing Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Campaign_Global__c</fullName>
        <label>National Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_National_Campaign</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecurringEvent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RecurringEvent</label>
        <referenceTo>RecurringEvent__c</referenceTo>
        <relationshipLabel>Club Events</relationshipLabel>
        <relationshipName>Club_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Dates__c</fullName>
        <label>Recurring Dates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Cutoff__c</fullName>
        <label>Registration Cutoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registrations_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registrations Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Additional_Attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Additional Attendees?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Field 1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Field 2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Field 3?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Mobile Phone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Phone Number?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Street_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Street Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_ZIP_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require ZIP Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_RSVP_to_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send RSVP notifications to Leader?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Show_Participants__c</fullName>
        <formula>(! ISNULL(Id)) &amp;&amp; 
Registrations_Accepted__c &amp;&amp; 
(ISPICKVAL(Status__c, &apos;Active&apos;) || 
ISPICKVAL(Status__c, &apos;Cancelled&apos;) || 
ISPICKVAL(Status__c, &apos;At Capacity&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Participants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_on_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signup_Instructions__c</fullName>
        <label>Signup Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signup_Restrictions__c</fullName>
        <label>Signup Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Description__c</fullName>
        <label>Sponsor Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Global__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Changes Required</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>At Capacity</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Owner_Category_Global__c</fullName>
        <label>Tactic Owner Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner_Catego</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Owner_Global__c</fullName>
        <label>Tactic Owner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tactic_Owner_Category_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Begin__c</fullName>
        <label>Time Begin</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_End__c</fullName>
        <label>Time End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Tentative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Tentative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_Description__c</fullName>
        <label>URL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_for_Additional_Information__c</fullName>
        <label>URL for Additional Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_to_Share__c</fullName>
        <label>URL to Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unpublish_Date__c</fullName>
        <label>Unpublish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unpublished_Notes__c</fullName>
        <label>Unpublished Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Waiver_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Required?</label>
        <type>Checkbox</type>
    </fields>
    <label>Club Event</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Club Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Club Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>